# blaue_tonne_api

./: .gitignore  .gitlab-ci.yml  .gitmessage  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pyver.sh  requirements.txt
.github/: copilot-instructions.md
app/: blaue_tonne.py  main.py  plans.py  plans.yaml
tests/: test_api.py  test_blaue_tonne.py
