[project]
name = "blaue-tonne-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "httpx>=0.28.1",
    "pdfplumber>=0.10.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-n auto -v --tb=short"

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
